I changed the definition of word while working in iteration 4. See assumptions.md. It still needs to be tested properly.